Adicionando foto perfil

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Daniel Jesus de Souza Costa</h1>
+        <img id="foto-daniel" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
     </body>
 </html>
