Adicionando descrição de perfil

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     <body>
         <h1>Daniel Jesus de Souza Costa</h1>
         <img id="foto-daniel" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
+        <br>
+        <p>
+            Olá!
+            <br>
+            Meu nome é Daniel, tenho 23 anos, sou <strong>brasileiro</strong>, moro em <strong>Taboão da Serra</strong>, <strong>São Paulo</strong>.
+            <br>
+            Sou web developer e designer, com experiência em <strong>Photoshop, Illustrator e CorelDraw.</strong>
+        </p>
     </body>
 </html>
