Adicionando lista de habilidades

--- a/index.html
+++ b/index.html
@@ -16,5 +16,18 @@
             <br>
             Sou web developer e designer, com experiência em <strong>Photoshop, Illustrator e CorelDraw.</strong>
         </p>
+        <h2>Minhas habilidades</h2>
+        <ol>
+            <li>Photoshop</li>
+            <br>
+            <li>Illustrator</li>
+            <br>
+            <li>CorelDraw</li>
+            <br>
+            <li>HTML</li>
+            <br>
+            <li>CSS</li>
+        </ol>
+        <br>
     </body>
 </html>
