Adicionando índice com links internos

--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     </head>
     <body>
         <h1>Daniel Jesus de Souza Costa</h1>
-        <img id="foto-daniel" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
+        <h2>Índice: </h2>
+        <ul>
+            <li><a href="#foto-perfil">Foto de Perfil</a></li>
+            <li><a href="#descricao">Descrição</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>
+            <li><a href="#blog">Blog Favorito</a></li>
+        </ul>   
+        <img id="foto-perfil" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
         <br>
-        <p>
+        <p id="descricao">
             Olá!
             <br>
-            Meu nome é Daniel, tenho 23 anos, sou <strong>brasileiro</strong>, moro em <strong>Taboão da Serra</strong>, <strong>São Paulo</strong>.
+            Meu nome é Daniel, tenho 23 anos, sou <strong>brasileiro</strong>, moro em <strong>Taboão da Serra, São Paulo</strong>.
             <br>
             Sou web developer e designer, com experiência em <strong>Photoshop, Illustrator e CorelDraw.</strong>
         </p>
-        <h2>Minhas habilidades</h2>
+        <h2 id="habilidades">Minhas habilidades</h2>
         <ol>
             <li>Photoshop</li>
             <br>
@@ -28,6 +35,5 @@
             <br>
             <li>CSS</li>
         </ol>
-        <br>
     </body>
 </html>
