Adicionando link de blog favorito

--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
             <br>
             <li>CSS</li>
         </ol>
+        <br>
+        <h3 id="blog">Blog Favorito</h3>
+            <a target="_blank" href="https://tecnoblog.net/">Blog Tecnologia</a>
     </body>
 </html>
