Mudando cores e fonte

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfólio | Daniel Jesus</title>
+        <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Daniel Jesus de Souza Costa</h1>
@@ -13,8 +14,9 @@
             <li><a href="#descricao">Descrição</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#blog">Blog Favorito</a></li>
-        </ul>   
-        <img id="foto-perfil" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
+        </ul>
+        <!-- .picture {border-radius: 100%;}-->   
+        <img id="foto-perfil" class="picture" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
         <br>
         <p id="descricao">
             Olá!
