Mudando cores dos links

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <h1>Daniel Jesus de Souza Costa</h1>
         <h2>Índice: </h2>
         <ul>
-            <li><a href="#foto-perfil">Foto de Perfil</a></li>
-            <li><a href="#descricao">Descrição</a></li>
-            <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#blog">Blog Favorito</a></li>
+            <li><a class="link" href="#foto-perfil">Foto de Perfil</a></li>
+            <li><a class="link" href="#descricao">Descrição</a></li>
+            <li><a class="link" href="#habilidades">Habilidades</a></li>
+            <li><a class="link" href="#blog">Blog Favorito</a></li>
         </ul>
         <!-- .picture {border-radius: 100%;}-->   
         <img id="foto-perfil" class="picture" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
@@ -21,9 +21,9 @@
         <p id="descricao">
             Olá!
             <br>
-            Meu nome é Daniel, tenho 23 anos, sou <strong>brasileiro</strong>, moro em <strong>Taboão da Serra, São Paulo</strong>.
+            Meu nome é Daniel, tenho 23 anos, sou <span class="color-bold">brasileiro</span>, moro em <span class="color-bold">Taboão da Serra, São Paulo</span>.
             <br>
-            Sou web developer e designer, com experiência em <strong>Photoshop, Illustrator e CorelDraw.</strong>
+            Sou web developer e designer, com experiência em <span class="color-bold">Photoshop, Illustrator</span> e <span class="color-bold">CorelDraw.</span>
         </p>
         <h2 id="habilidades">Minhas habilidades</h2>
         <ol>
