--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     </head>
     <body>
         <h1>Daniel Jesus de Souza Costa</h1>
+        <br>
         <h2>Índice: </h2>
         <ul>
             <li><a class="link" href="#foto-perfil">Foto de Perfil</a></li>
             <li><a class="link" href="#descricao">Descrição</a></li>
             <li><a class="link" href="#habilidades">Habilidades</a></li>
             <li><a class="link" href="#blog">Blog Favorito</a></li>
-        </ul>
+        </ul><br>
         <!-- .picture {border-radius: 100%;}-->   
         <img id="foto-perfil" class="picture" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
-        <br>
+        <br><br>
         <p id="descricao">
             Olá!
             <br>
             Meu nome é Daniel, tenho 23 anos, sou <span class="color-bold">brasileiro</span>, moro em <span class="color-bold">Taboão da Serra, São Paulo</span>.
             <br>
             Sou web developer e designer, com experiência em <span class="color-bold">Photoshop, Illustrator</span> e <span class="color-bold">CorelDraw.</span>
-        </p>
+        </p><br>
         <h2 id="habilidades">Minhas habilidades</h2>
         <ol>
             <li>Photoshop</li>
@@ -39,6 +40,7 @@
         </ol>
         <br>
         <h3 id="blog">Blog Favorito</h3>
-            <a target="_blank" href="https://tecnoblog.net/">Blog Tecnologia</a>
+            <br>
+            <a class="btn" target="_blank" href="https://tecnoblog.net/">Blog Tecnologia</a>
     </body>
 </html>
