Adicionando link github

--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfólio | Daniel Jesus</title>
         <link href="styles/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Daniel Jesus de Souza Costa</h1>
+        <h1>Daniel Jesus de Souza</h1>
         <br>
         <h2>Índice: </h2>
         <ul>
             <li><a class="link" href="#foto-perfil">Foto de Perfil</a></li>
-            <li><a class="link" href="#descricao">Descrição</a></li>
+            <li><a class="link" href="#sobre-mim">Sobre Mim</a></li>
             <li><a class="link" href="#habilidades">Habilidades</a></li>
-            <li><a class="link" href="#blog">Blog Favorito</a></li>
-        </ul><br>
-        <!-- .picture {border-radius: 100%;}-->   
-        <img id="foto-perfil" class="picture" src="https://ik.imagekit.io/wwqm3xdvfk/foto_daniel_GUZwJY3EWc.jpg" alt="Foto Daniel" width="200px">
+            <li><a class="link" href="#github">Meu GitHub</a></li>
+        </ul><br>  
+            <img id="foto-perfil" class="thumb" src="foto_daniel.jpg" alt="Foto Daniel">
         <br><br>
-        <p id="descricao">
-            Olá!
-            <br>
-            Meu nome é Daniel, tenho 23 anos, sou <span class="color-bold">brasileiro</span>, moro em <span class="color-bold">Taboão da Serra, São Paulo</span>.
-            <br>
-            Sou web developer e designer, com experiência em <span class="color-bold">Photoshop, Illustrator</span> e <span class="color-bold">CorelDraw.</span>
-        </p><br>
+        <h2 id="sobre-mim">Sobre Mim</h2>
+            <p>
+                <span class="text-size">Olá!</span>
+                <br>
+                Meu nome é Daniel, tenho 23 anos, sou <span class="color-bold">brasileiro</span>, moro em <span class="color-bold">Taboão da Serra, São Paulo</span>.
+                <br>
+                Sou web developer e designer, com experiência em <span class="color-bold">Photoshop, Illustrator</span> e <span class="color-bold">CorelDraw.</span>
+            </p><br>
         <h2 id="habilidades">Minhas habilidades</h2>
         <ol>
             <li>Photoshop</li>
@@ -39,8 +40,8 @@
             <li>CSS</li>
         </ol>
         <br>
-        <h3 id="blog">Blog Favorito</h3>
+        <h3 id="github">Visite meu GitHub</h3>
             <br>
-            <a class="btn" target="_blank" href="https://tecnoblog.net/">Blog Tecnologia</a>
+            <a class="btn" target="_blank" href="https://github.com/danieljs-dev">GitHub Daniel</a>
     </body>
 </html>
