Criando diretório img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a class="link" href="#habilidades">Habilidades</a></li>
             <li><a class="link" href="#github">Meu GitHub</a></li>
         </ul><br>  
-            <img id="foto-perfil" class="thumb" src="foto_daniel.jpg" alt="Foto Daniel">
+            <img id="foto-perfil" class="thumb" src="img/foto_daniel.jpg" alt="Foto Daniel">
         <br><br>
         <h2 id="sobre-mim">Sobre Mim</h2>
             <p>
