Adicionando footer e copyright

--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
         <h2 id="habilidades">Minhas habilidades</h2>
         <ol>
             <li>Photoshop</li>
-            <br>
             <li>Illustrator</li>
-            <br>
             <li>CorelDraw</li>
-            <br>
             <li>HTML</li>
-            <br>
             <li>CSS</li>
         </ol>
         <br>
         <h3 id="github">Visite meu GitHub</h3>
             <br>
-            <a class="btn" target="_blank" href="https://github.com/danieljs-dev">GitHub Daniel</a>
+            <a class="btn" target="_blank" href="https://github.com/danieljs-dev">GitHub Daniel</a><br><br>
+        <footer>
+            <p class="copyright">
+            Daniel Jesus © 2020. Todos direitos reservados.
+            </p>
+        </footer>
     </body>
 </html>
