--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Daniel Jesus de Souza</h1>
         <br>
-        <h2>Índice: </h2>
+        <h2>Índice</h2>
         <ul>
             <li><a class="link" href="#foto-perfil">Foto de Perfil</a></li>
             <li><a class="link" href="#sobre-mim">Sobre Mim</a></li>
